[package]
name = "w6r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "w6r"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module", "generate-import-lib", "anyhow", "chrono", "chrono-tz"] }
probminhash = "0.1.11"
fnv = "1.0.7"
lazy_static = "1.5.0"
icu = { version = "1.5.0", features = ["compiled_data", "sync"] }
zhconv = "0.3.1"
regex = { version = "1.10.5", features = ["unicode-gencat"] }