[package]
name = "w6sketch"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "w6sketch"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.2", features = ["extension-module", "generate-import-lib", "anyhow", "chrono", "chrono-tz", "abi3", "abi3-py37"] }
probminhash = "0.1.11"
fnv = "1.0.7"
lazy_static = "1.5.0"
icu = { version = "1.5.0", features = ["compiled_data", "sync"] }
zhconv = "0.3.3"
regex = { version = "1.11.1", features = ["unicode-gencat"] }